# bobalkkagi

./: .gitignore  KUSER_SHARED_DATA.py  LICENSE  README.md  __main__.py  api_hook.py  api_hook2.py  application.py  bobalkkagi.spec  cache.py  call.txt  config.py  constValue.py  debugger.py  dump_reset.py  dump_set.py  emulation.py  globalValue.py  hookFuncs.py  loader.py  logger.py  peb.py  peb_v2.py  pyproject.toml  reflector.py  setup.py  teb.py  unpacking.py  unwrapping.py  util.py
.github/workflows/: py310-win64-ci.yml  python-publish.yml
bobalkkagi/: __main__.py  api_hook.py  application.py  debugger.py  dump_reset.py  emulation.py  globalValue.py  hookFuncs.py  kuserSharedData.py  loader.py  logger.py  peb.py  reflector.py  teb.py  unpacking.py  unwrapping.py  util.py  util_unwrap.py
bobalkkagi/log/: putty_protected_log.txt
dll/: Readme.md
dumpfile/: beforeOEP
