[tool.poetry]
name = "bobalkkagi"
version = "0.1.0"
description = "Unpack and unwrapping executables protected with Themida 3.1.3 by BOB11_Bobalkkagi"
authors = ["hackerhoon <gkswlgns21@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
unicorn = "^2.0.1.post1"
capstone = "^4.0.2"
pefile = "^2022.5.30"

[tool.poetry.scripts]
bobalkkagi = 'bobalkkagi.application:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
