[tool.poetry]
name = "bobalkkagi"
version = "0.2.3"
description = "Unpack and unwrapping executables protected with Themida 3.1.3 by BOB11_Bobalkkagi"
authors = ["hackerhoon <gkswlgns21@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
unicorn = "^2.0.1.post"
lief = ">=0.12.2"
fire = "^0.4"
capstone = "^4.0.2"
pefile = "^2022.5.30"
pyinstaller = "^5.7.0"
distorm3 = "^3.5.2"

[tool.poetry.scripts]
bobalkkagi = 'bobalkkagi.application:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
